# bezdna-proto

./: .gitattributes  .gitignore  README.md  bezdna-proto.sln  latestversion.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Build_MSBuild.yml  Build_fix.yml  build.yml
ErrorReporter/: App.axaml  App.axaml.cs  ErrorReporter.csproj  FodyWeavers.xml
ErrorReporter/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
ErrorReporter/Views/: MainWindow.axaml  MainWindow.axaml.cs
RPAK2L/: App.axaml  App.axaml.cs  Directory.Build.targets  FodyWeavers.xml  Logger.cs  Program.cs  RPAK2L.csproj  Settings.cs  ViewLocator.cs  icon.blend  systemlibs.txt  updater
RPAK2L.Common/: Class1.cs  RPAK2L.Common.csproj
RPAK2L.Program/: App.axaml  App.axaml.cs  Directory.Build.props  FodyWeavers.xml  Ini.cs  Logger.cs  Program.cs  RPAK2L.Program.csproj  Settings.cs  ViewLocator.cs
RPAK2L.Program/Backend/: Common.cs  DirectoryChooseDialog.cs  Enum.cs  FileChooseDialog.cs
RPAK2L.Program/Bezdna/: Program.cs  Utils.cs
RPAK2L.Program/CrimesAgainstHumanity/: WaifuView.axaml.cs
RPAK2L.Program/Dialogs/: ProgressableTask.cs  WarningDataContext.cs  WarningDialog.axaml  WarningDialog.axaml.cs  WarningMultiItemContext.cs  (+2 more)
RPAK2L.Reporter/: Program.cs  RPAK2L.Reporter.csproj  ViewLocator.cs  a.cs
RPAK2L.UI/: Class1.cs  FodyWeavers.xml  RPAK2L.UI.csproj
RPAK2L.Updater/: Class1.cs  RPAK2L.Updater.csproj
bezdna-proto/: Utils.cs  bezdna-proto.csproj
updater/: CMakeLists.txt  main.cpp  paths.cpp  paths.h  unzip.cpp  unzip.h  updaterDownloader.cpp  updaterDownloader.h
(+94 files in other folders)
